# api-yandress-appointments

./: .gitignore  CHANGELOG.md  README.md  cli.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 5d656ce105bc_agregar_completed_at.py  c9e078956131_cambiar_datos_para_autocompletar_fechas.py
app/api/: main.py
app/api/routers/: appointments.py  auth.py
app/core/: filter_factory.py  filtering.py  security.py  settings.py
app/core/filters/: BaseFilterFactory.py
app/database/: session.py
app/models/: appointment.py  user.py
app/repositories/: appointment_repository.py
app/schemas/: appointment.py  common.py
app/services/: appointment_service.py  auth.py
